Avanze pero no mucho

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
     <input id="name" type="text" formControlName="name">
     <button type="submit" class="primary">Send</button>
   </form>
+  <button (click)="getKey()">Obtenir clau</button>
   <div>
     <p>Server response: {{ serverResponse }}</p>
   </div>
